--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -6,7 +6,9 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
             <h1 class="mt-5">Search for Availability</h1>
-            <form action="" method="" novalidate class="needs-validation">
+
+            <form action="/search-availability" method="post" novalidate class="needs-validation">
+                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                 <div class="form-row" id="reservation-dates">
                     <div class="col">
                         <input type="text" class="form-control" name="start" required placeholder="Arrival" />
@@ -20,6 +22,7 @@
                     Search Availability
                 </button>
             </form>
+
         </div>
     </div>
 </div>
