--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -53,7 +53,41 @@
                 </form>
                 `;
 
-            attention.custom({ html, title: "Choose your dates" });
+            attention.custom({
+                html,
+                title: "Choose your dates",
+                willOpen: () => {
+                    const elem = document.getElementById("reservation-dates-model");
+                    let popUp = document.getElementsByClassName("swal2-popup")[0]
+                    const rp = new DateRangePicker(elem, {
+                        buttonClass: "btn",
+                        autohide: true,
+                        container: popUp,
+                        format: "yyyy-mm-dd",
+                        showOnFocus: true,
+                    })
+                },
+                didOpen: () => {
+                    document.getElementById("start").removeAttribute("disabled")
+                    document.getElementById("end").removeAttribute("disabled")
+                },
+                callback: async function (formValues) {
+                    console.log("called")
+
+                    let form = document.getElementById("check-availability-form")
+                    let formData = new FormData(form)
+                    formData.append("csrf_token", "{{.CSRFToken}}")
+
+                    fetch("/search-availability-json", {
+                        method: "post",
+                        body: formData,
+                    })
+                        .then(res => res.json())
+                        .then(data => {
+                            console.log(data)
+                        })
+                }
+            });
         });
 </script>
 {{end}}
