--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -5,23 +5,29 @@
     <div class="row">
         <div class="col">
             <h1>Make reservation</h1>
-            <form action="post" action="" class="needs-validation" novalidade>
+            <form action="/make-reservation" method="post" class="_needs-validation" novalidade>
+                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                 <div class="form-group mt-5">
                     <label for="first_name">First name:</label>
-                    <input type="text" name="first_name" id="first_name" class="form-control" required
+                    {{with .Form.Errors.Get "first_name"}}
+                    <label class="text-danger">{{.}}</label>
+                    {{end}}
+                    <input type="text" name="first_name" id="first_name"
+                        class='form-control {{with .Form.Errors.Get  "first_name" }} is-invalid{{end}}' _required
                         autocomplete="off">
                 </div>
                 <div class="form-group mt-5">
                     <label for="last_name">Last name:</label>
-                    <input type="text" name="last_name" id="last_name" class="form-control" required autocomplete="off">
+                    <input type="text" name="last_name" id="last_name" class="form-control" _required
+                        autocomplete="off">
                 </div>
                 <div class="form-group mt-5">
                     <label for="email">Email:</label>
-                    <input type="email" name="email" id="email" class="form-control" required autocomplete="off">
+                    <input type="email" name="email" id="email" class="form-control" _required autocomplete="off">
                 </div>
                 <div class="form-group mt-5">
                     <label for="phone">Phone number:</label>
-                    <input type="text" name="phone" id="phone" class="form-control" required autocomplete="off">
+                    <input type="text" name="phone" id="phone" class="form-control" _required autocomplete="off">
                 </div>
 
                 <hr>
