--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -5,6 +5,8 @@
     <div class="row">
         <div class="col">
             <h1>Make reservation</h1>
+
+            {{$res := index .Data "reservation"}}
             <form action="/make-reservation" method="post" class="_needs-validation" novalidade>
                 <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                 <div class="form-group mt-5">
@@ -13,21 +15,35 @@
                     <label class="text-danger">{{.}}</label>
                     {{end}}
                     <input type="text" name="first_name" id="first_name"
-                        class='form-control {{with .Form.Errors.Get  "first_name" }} is-invalid{{end}}' _required
-                        autocomplete="off">
+                        class='form-control {{with .Form.Errors.Get  "first_name" }} is-invalid{{end}}'
+                        autocomplete="off" value="{{$res.FirstName}}" _required>
                 </div>
                 <div class="form-group mt-5">
                     <label for="last_name">Last name:</label>
-                    <input type="text" name="last_name" id="last_name" class="form-control" _required
-                        autocomplete="off">
+                    {{with .Form.Errors.Get "last_name"}}
+                    <label class="text-danger">{{.}}</label>
+                    {{end}}
+                    <input type="text" name="last_name" id="last_name"
+                        class='form-control {{with .Form.Errors.Get  "last_name" }} is-invalid{{end}}'
+                        autocomplete="off" value="{{$res.LastName}}" _required>
                 </div>
                 <div class="form-group mt-5">
                     <label for="email">Email:</label>
-                    <input type="email" name="email" id="email" class="form-control" _required autocomplete="off">
+                    {{with .Form.Errors.Get "email"}}
+                    <label class="text-danger">{{.}}</label>
+                    {{end}}
+                    <input type="email" name="email" id="email"
+                        class='form-control {{with .Form.Errors.Get  "email" }} is-invalid{{end}}' autocomplete="off"
+                        value="{{$res.Email}}" _required>
                 </div>
                 <div class="form-group mt-5">
                     <label for="phone">Phone number:</label>
-                    <input type="text" name="phone" id="phone" class="form-control" _required autocomplete="off">
+                    {{with .Form.Errors.Get "phone"}}
+                    <label class="text-danger">{{.}}</label>
+                    {{end}}
+                    <input type="text" name="phone" id="phone"
+                        class='form-control {{with .Form.Errors.Get  "phone" }} is-invalid{{end}}' autocomplete="off"
+                        value="{{$res.Phone}}" _required>
                 </div>
 
                 <hr>
